Configure CloudWatch input plugin

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -620,58 +620,58 @@
 #   # files = ["memory.*usage*", "memory.limit_in_bytes"]
 
 
-# # Pull Metric Statistics from Amazon CloudWatch
-# [[inputs.cloudwatch]]
-#   ## Amazon Region
-#   region = "us-east-1"
-#
-#   ## Amazon Credentials
-#   ## Credentials are loaded in the following order
-#   ## 1) Assumed credentials via STS if role_arn is specified
-#   ## 2) explicit credentials from 'access_key' and 'secret_key'
-#   ## 3) shared profile from 'profile'
-#   ## 4) environment variables
-#   ## 5) shared credentials file
-#   ## 6) EC2 Instance Profile
-#   #access_key = ""
-#   #secret_key = ""
-#   #token = ""
-#   #role_arn = ""
-#   #profile = ""
-#   #shared_credential_file = ""
-#
-#   ## Requested CloudWatch aggregation Period (required - must be a multiple of 60s)
-#   period = "5m"
-#
-#   ## Collection Delay (required - must account for metrics availability via CloudWatch API)
-#   delay = "5m"
-#
-#   ## Recomended: use metric 'interval' that is a multiple of 'period' to avoid
-#   ## gaps or overlap in pulled data
-#   interval = "5m"
-#
-#   ## Configure the TTL for the internal cache of metrics.
-#   ## Defaults to 1 hr if not specified
-#   #cache_ttl = "10m"
-#
-#   ## Metric Statistic Namespace (required)
-#   namespace = "AWS/ELB"
-#
-#   ## Maximum requests per second. Note that the global default AWS rate limit is
-#   ## 10 reqs/sec, so if you define multiple namespaces, these should add up to a
-#   ## maximum of 10. Optional - default value is 10.
-#   ratelimit = 10
-#
-#   ## Metrics to Pull (optional)
-#   ## Defaults to all Metrics in Namespace if nothing is provided
-#   ## Refreshes Namespace available metrics every 1h
-#   #[[inputs.cloudwatch.metrics]]
-#   #  names = ["Latency", "RequestCount"]
-#   #
-#   #  ## Dimension filters for Metric (optional)
-#   #  [[inputs.cloudwatch.metrics.dimensions]]
-#   #    name = "LoadBalancerName"
-#   #    value = "p-example"
+# Pull Metric Statistics from Amazon CloudWatch
+[[inputs.cloudwatch]]
+  ## Amazon Region
+  region = "$INPUTS_CLOUDWATCH_REGION"
+
+  ## Amazon Credentials
+  ## Credentials are loaded in the following order
+  ## 1) Assumed credentials via STS if role_arn is specified
+  ## 2) explicit credentials from 'access_key' and 'secret_key'
+  ## 3) shared profile from 'profile'
+  ## 4) environment variables
+  ## 5) shared credentials file
+  ## 6) EC2 Instance Profile
+  #access_key = ""
+  #secret_key = ""
+  #token = ""
+  #role_arn = ""
+  #profile = ""
+  #shared_credential_file = ""
+
+  ## Requested CloudWatch aggregation Period (required - must be a multiple of 60s)
+  period = "$INPUTS_CLOUDWATCH_PERIOD"
+
+  ## Collection Delay (required - must account for metrics availability via CloudWatch API)
+  delay = "$INPUTS_CLOUDWATCH_DELAY"
+
+  ## Recomended: use metric 'interval' that is a multiple of 'period' to avoid
+  ## gaps or overlap in pulled data
+  interval = "$INPUTS_CLOUDWATCH_INTERVAL"
+
+  ## Configure the TTL for the internal cache of metrics.
+  ## Defaults to 1 hr if not specified
+  cache_ttl = "$INPUTS_CLOUDWATCH_CACHE_TTL"
+
+  ## Metric Statistic Namespace (required)
+  namespace = "$INPUTS_CLOUDWATCH_NAMESPACE"
+
+  ## Maximum requests per second. Note that the global default AWS rate limit is
+  ## 10 reqs/sec, so if you define multiple namespaces, these should add up to a
+  ## maximum of 10. Optional - default value is 10.
+  ratelimit = $INPUTS_CLOUDWATCH_RATELIMIT
+
+  ## Metrics to Pull (optional)
+  ## Defaults to all Metrics in Namespace if nothing is provided
+  ## Refreshes Namespace available metrics every 1h
+  #[[inputs.cloudwatch.metrics]]
+  #  names = ["Latency", "RequestCount"]
+  #
+  #  ## Dimension filters for Metric (optional)
+  #  [[inputs.cloudwatch.metrics.dimensions]]
+  #    name = "LoadBalancerName"
+  #    value = "p-example"
 
 
 # # Gather health check statuses from services registered in Consul
