Upgrade to version 1.2

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -1872,11 +1872,11 @@
 [[inputs.statsd]]
   ## Address and port to host UDP listener on
   service_address = ":8125"
-  ## Delete gauges every interval (default=false)
+  ## Delete gauges every interval (default=true)
   delete_gauges = $INPUTS_STATSD_DELETE_GAUGES
-  ## Delete counters every interval (default=false)
+  ## Delete counters every interval (default=true)
   delete_counters = $INPUTS_STATSD_DELETE_COUNTERS
-  ## Delete sets every interval (default=false)
+  ## Delete sets every interval (default=true)
   delete_sets = $INPUTS_STATSD_DELETE_SETS
   ## Delete timings & histograms every interval (default=true)
   delete_timings = $INPUTS_STATSD_DELETE_TIMINGS
