--- a/telegraf.conf
+++ b/telegraf.conf
@@ -70,7 +70,7 @@
   logfile = "$AGENT_LOGFILE"
 
   ## Override default hostname, if empty use os.Hostname()
-  hostname = $AGENT_HOSTNAME
+  hostname = ""
   ## If set to true, do no set the "host" tag in the telegraf agent.
   omit_hostname = $AGENT_OMIT_HOSTNAME
 
